      information about the host system.
  * checks/md5sums:
    + [NT] Fix path traversal issue that could leak information
      about the host system.
  * checks/menus:
    + [NT] Fix path traversal issue that could leak information
      about the host system.
  * checks/shared-libs:
    + [NT] Fix path traversal issue that could leak information
      about the host system.

  * collection/{changelog-file,debian-readme}:
    + [NT] Ignore files in usr/doc/<pkg>.
    + [NT] Skip collection if usr/share/doc/<pkg> is not contained
      within the package root.

  * lib/Util.pm:
    + [NT] Add sub to check if a path is contained within a given dir.

 -- Niels Thykier <niels@thykier.net>  Fri, 05 Apr 2013 22:00:00 +0200

lintian (2.4.3+squeeze1) stable; urgency=low

  * checks/{conffiles,etcfiles}:
    + [NT] Skip all checks in conffiles is a symlink.
  * checks/debian-source-dir:
    + [NT] Fixed information disclosure issue, where Lintian could
      be tricked into disclosing the presence of files on the host
      system via specially crafted source packages.

  * debian/source/options:
    + [NT] Added tar-ignore option that only excludes .git to
      prevent some files from being "lost" when rebuilding the
      package.

 -- Niels Thykier <niels@thykier.net>  Wed, 10 Aug 2011 20:53:04 +0200

lintian (2.4.3) unstable; urgency=low

  The "Policy 3.9.1" release.

  * Summary of tag changes:
    + Added:
      - embedded-library
    + Removed:
      - debian-news-entry-without-blank-line
      - dh_testversion-is-deprecated

  * checks/binaries{,.desc}:
    + [RG] Detect embedded copies of expat, libbz2, libmagic, libxml2,
      pcre3, and tiff.
    + [RG] Recognise powerpcspe and sh4 ELF objects.
    + [RA] Warn that spelling-error-in-binary may produce false positives
      for words containing non-ASCII characters.  (See #588661)
  * checks/changelog-file{,.desc}:
    + [RA] apt-listchanges has been fixed, so drop the check for NEWS